# courageous-comets

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  application.yaml  conftest.py  courageous-comets.yaml  docker-compose.yaml  mkdocs.yaml  pyproject.toml  versions.json
.devcontainer/: devcontainer.json  docker-compose.yaml  postcreate.sh  updatecontent.sh
.github/workflows/: build-devcontainer.yaml  ci.yaml  publish.yaml
courageous_comets/: __init__.py  __main__.py  bot.py  charts.py  client.py  config.yaml  enums.py  error.py  exceptions.py  main.py  models.py  preprocessing.py  processing.py  sentiment.py  settings.py  test__client.py  test__redis.py  test__sentiment.py  utils.py  vectorizer.py  words.py
courageous_comets/cogs/: about.py  boilerplate.py  frequency.py  interactions.py  keywords.py  messages.py  ping.py  sentiment.py
courageous_comets/discord/: __init__.py  messages.py
courageous_comets/nltk/: __init__.py  helpers.py
courageous_comets/redis/: __init__.py  helpers.py  keys.py  messages.py  schema.py
courageous_comets/transformers/: __init__.py  helpers.py
docs/: CHANGELOG.md  README.md
docs/admin-guide/: configuration.md  deployment.md  index.md
docs/contributor-guide/: architecture-design.md  development-environment.md  documentation.md  index.md  secrets-management.md  testing.md  version-control.md
docs/stylesheets/: tabs.css
docs/user-guide/: data-privacy.md  getting-started.md  index.md  installing-the-bot.md
examples/: test__example.py
tests/: conftest.py
tests/courageous_comets/: test__client.py  test__preprocessing.py  test__scope.py  test__sentiment.py  test__words.py
tests/integrations/: conftest.py  test__bot.py  test__messages.py  test__redis.py
v0.0.1/: 404.html  index.html  sitemap.xml
v0.0.1/CHANGELOG/: index.html
v0.0.1/contributor-guide/: index.html
v0.0.1/search/: search_index.json
v0.0.2/: 404.html  index.html  sitemap.xml
v0.0.2/CHANGELOG/: index.html
v0.0.2/contributor-guide/: index.html
v0.0.2/search/: search_index.json
v0.0.3/: 404.html  index.html  sitemap.xml
v0.0.3/CHANGELOG/: index.html
v0.0.3/contributor-guide/: index.html
v0.0.3/search/: search_index.json
v0.0.4/: 404.html  index.html  sitemap.xml
v0.0.4/CHANGELOG/: index.html
v0.0.4/contributor-guide/: index.html
v0.0.4/search/: search_index.json
v0.0.5/: 404.html  index.html  sitemap.xml
v0.0.5/CHANGELOG/: index.html
v0.0.5/contributor-guide/: index.html
v0.0.5/search/: search_index.json
v0.0.6/: 404.html  index.html  sitemap.xml
v0.0.6/CHANGELOG/: index.html
v0.0.6/admin-guide/: index.html
v0.0.6/contributor-guide/: index.html
v0.0.6/search/: search_index.json
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.0/CHANGELOG/: index.html
v0.1.0/admin-guide/: index.html
v0.1.0/contributor-guide/: index.html
v0.1.0/search/: search_index.json
v0.10.0/: 404.html  index.html  sitemap.xml
v0.10.0/CHANGELOG/: index.html
v0.10.0/admin-guide/: index.html
v0.10.0/contributor-guide/: index.html
v0.10.0/search/: search_index.json
v0.2.0/: 404.html  index.html  sitemap.xml
v0.2.0/CHANGELOG/: index.html
v0.2.0/admin-guide/: index.html
v0.2.0/contributor-guide/: index.html
v0.2.0/search/: search_index.json
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/CHANGELOG/: index.html
v0.3.0/admin-guide/: index.html
v0.3.0/contributor-guide/: index.html
v0.3.0/search/: search_index.json
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.0/CHANGELOG/: index.html
v0.4.0/admin-guide/: index.html
v0.4.0/contributor-guide/: index.html
v0.4.0/search/: search_index.json
v0.5.0/: 404.html  index.html  sitemap.xml
v0.5.0/CHANGELOG/: index.html
v0.5.0/admin-guide/: index.html
v0.5.0/contributor-guide/: index.html
v0.5.0/search/: search_index.json
v0.6.0/: 404.html  index.html  sitemap.xml
v0.6.0/CHANGELOG/: index.html
v0.6.0/admin-guide/: index.html
v0.6.0/contributor-guide/: index.html
v0.6.0/search/: search_index.json
v0.7.0/: 404.html  index.html  sitemap.xml
v0.7.0/CHANGELOG/: index.html
v0.7.0/admin-guide/: index.html
v0.7.0/contributor-guide/: index.html
v0.7.0/search/: search_index.json
v0.7.0/stylesheets/: table.css
v0.8.0/: 404.html  index.html  replace-token.sh  sitemap.xml
v0.8.0/CHANGELOG/: index.html
v0.8.0/admin-guide/: index.html
v0.8.0/contributor-guide/: index.html
v0.8.0/search/: search_index.json
v0.9.0/: 404.html  index.html  sitemap.xml
v0.9.0/CHANGELOG/: index.html
v1.0.0/: 404.html  index.html  sitemap.xml
v1.0.0/CHANGELOG/: index.html
(+137 files in other folders)
